# capstone-archive

./: .gitignore  LICENSE  README.md  devserver.sh  docker-compose.yml  package-lock.json
auth/: Cargo.toml
auth/proto/: auth.proto
auth/src/: server.rs
server/: .env  .env.local  Cargo.toml  Dockerfile  go.mod  go.sum  gqlgen.yml  server.go  sqlc.yaml
server/capstone-server/: Cargo.toml
server/cmd/: server.go
server/db/migrations/: 20210418212229_init.sql
server/db/query/: capstone.sql  user.sql
server/graph/: schema.graphqls  schema.resolvers.go
server/graph/model/: models_gen.go
server/internal/auth/: argon.go  auth.go  context.go  cors.go  redis.go  redis_test.go  session.go
server/internal/config/: envs.go
server/internal/db/: capstone.sql.go  db.go  db_schema.go  db_test.go  fake_data.go  fake_data_test.go  init.go  models.go  sample_data.go  test_data.go  user.sql.go
server/internal/db/dbtest/: dbtest.go
server/internal/envs/: envs.go
server/internal/fake/: fake.go  fake_test.go
server/internal/graph/: resolver.go  schema.graphqls  schema.resolvers.go
server/internal/graph/model/: models_gen.go
server/internal/helpers/: resolverHelpers.go  serverHelpers.go
server/internal/jwt/: jwt.go  jwt_test.go
server/internal/pack/: pack.go
server/internal/resolve/: capstone.go  capstone_test.go  user.go  user_test.go
server/internal/router/: graphql.go  router.go
server/internal/routes/: graphql.go  router.go
server/internal/serve/: cors.go  serve.go
server/migrations/: 20210209005522_init.sql
server/src/: config.rs  main.rs
(+47 files in other folders)
