[package]
name = "auth_service"
version = "0.1.0"
authors = ["Matt Wilkinson <mattwilki17@gmail.com>"]
edition = "2018"


[[bin]] # Bin to run the HelloWorld gRPC server
name = "auth_server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5"
