[package]
name = "capstone-server"
version = "0.1.0"
authors = ["Matt Wilkinson <mattwilki17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
tokio = { version = "1.2", features = ["full"] }
dotenv = "0.15"
envy = "0.4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
warp = "0.3"
async-graphql = { version = "2.5", default-features = false }
async-graphql-warp = "2.5"
